# flyte-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_knowledge.py
src/flyte_mcp/: __init__.py  migrate.py  runtime.py  server.py
src/flyte_mcp/data/: flyte-v2-knowledge.json
